Change branding from StreamHub to Angel Contreras

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             color: #e50914;
             letter-spacing: 8px;
             animation: logoGlow 2s ease;
+            white-space: nowrap;
         }
 
         @keyframes logoGlow {
@@ -360,12 +361,12 @@
 </head>
 <body>
     <div class="intro-screen">
-        <div class="intro-logo">STREAMHUB</div>
+        <div class="intro-logo">ANGEL CONTRERAS</div>
     </div>
 
     <div class="main-content">
     <nav class="navbar" id="navbar">
-        <div class="logo">STREAMHUB</div>
+        <div class="logo">ANGEL CONTRERAS</div>
         <div class="nav-links">
             <a href="#home">Home</a>
             <a href="#series">Series</a>
@@ -497,8 +498,9 @@
             <a href="#">Privacy</a>
             <a href="#">Contact Us</a>
         </div>
-        <p class="footer-text">© 2025 StreamHub. All rights reserved.</p>
+        <p class="footer-text">© 2025 Angel Contreras. All rights reserved.</p>
     </footer>
+    </div>
 
     <script>
         const navbar = document.getElementById('navbar');
