--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
         }
 
         .netflix-logo {
-            font-size: 200px;
+            font-size: 120px;
             font-weight: 900;
             color: #E50914;
-            letter-spacing: -10px;
+            letter-spacing: 4px;
             animation: logoZoom 2s ease;
+            white-space: nowrap;
         }
 
         @keyframes logoZoom {
@@ -61,6 +62,86 @@
                 opacity: 0;
                 visibility: hidden;
             }
+        }
+
+        /* Who's Watching Screen */
+        .whos-watching {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #141414;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+            opacity: 0;
+            visibility: hidden;
+            animation: showWhoIsWatching 0.5s ease 3.5s forwards;
+        }
+
+        @keyframes showWhoIsWatching {
+            to {
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+
+        .whos-watching-title {
+            font-size: 60px;
+            font-weight: 400;
+            color: #fff;
+            margin-bottom: 50px;
+            text-align: center;
+        }
+
+        .profiles-container {
+            display: flex;
+            gap: 40px;
+            flex-wrap: wrap;
+            justify-content: center;
+            max-width: 900px;
+        }
+
+        .profile {
+            cursor: pointer;
+            transition: transform 0.3s;
+            text-align: center;
+        }
+
+        .profile:hover {
+            transform: scale(1.1);
+        }
+
+        .profile-avatar {
+            width: 180px;
+            height: 180px;
+            border-radius: 8px;
+            margin-bottom: 15px;
+            border: 3px solid transparent;
+            transition: border-color 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 80px;
+            font-weight: 700;
+            color: #fff;
+        }
+
+        .profile:hover .profile-avatar {
+            border-color: #e5e5e5;
+        }
+
+        .profile-name {
+            font-size: 20px;
+            color: #808080;
+            transition: color 0.3s;
+        }
+
+        .profile:hover .profile-name {
+            color: #e5e5e5;
         }
 
         /* Main Content */
