--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Angel Contreras — Netflix-style</title>
   <meta name="color-scheme" content="dark">
+
+  <!-- If you have licensed Netflix Sans, point to it here -->
+  <!--
+  <style>
+    @font-face{
+      font-family: "Netflix Sans";
+      src: url("/assets/fonts/NetflixSans-Regular.woff2") format("woff2"),
+           url("/assets/fonts/NetflixSans-Regular.woff") format("woff");
+      font-weight: 400; font-style: normal; font-display: swap;
+    }
+    @font-face{
+      font-family: "Netflix Sans";
+      src: url("/assets/fonts/NetflixSans-Bold.woff2") format("woff2"),
+           url("/assets/fonts/NetflixSans-Bold.woff") format("woff");
+      font-weight: 700; font-style: normal; font-display: swap;
+    }
+  </style>
+  -->
+
+  <!-- Free look-alike fallback (remove if you use Netflix Sans above) -->
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
   <style>
     :root{
       --bg:#141414; --ink:#fff; --muted:#e5e5e5; --ink-2:#b3b3b3;
@@ -18,6 +40,13 @@
       background:var(--bg); color:var(--ink); overflow-x:hidden;
     }
 
+    /* Netflix-like font stack utility */
+    .nf{
+      font-family:"Netflix Sans","Bebas Neue",system-ui,-apple-system,"Segoe UI","Helvetica Neue",Arial,sans-serif;
+      letter-spacing:.02em;
+      text-transform:uppercase;
+    }
+
     /* --- Netflix splash --- */
     .netflix-intro{
       position:fixed; inset:0; display:grid; place-items:center;
@@ -26,6 +55,7 @@
     .netflix-logo{
       font-size: clamp(72px,12vw,200px); font-weight: 900; color:var(--accent);
       letter-spacing:-.05em; animation:logoZoom 1.8s ease both;
+      text-shadow:.06em 0 var(--accent);  /* subtle red offset like the N */
     }
     @keyframes logoZoom{
       0%{transform:scale(.6); opacity:0}
@@ -48,6 +78,7 @@
     }
     .navbar.scrolled{ background:#0f0f0f; box-shadow:0 2px 0 rgba(255,255,255,.04) inset; }
     .brand{font-weight:900; color:var(--accent); letter-spacing:-.04em; font-size: clamp(22px,3.2vw,32px)}
+
     .navlinks{display:flex; gap:22px; align-items:center; flex-wrap:wrap}
     .navlinks a{
       color:#e5e5e5; text-decoration:none; font-size:14px; font-weight:600;
@@ -86,9 +117,7 @@
     .section{padding: 28px clamp(16px,4vw,48px) 8px}
     .section-title{font-size:20px; font-weight:700; color:#e5e5e5; margin:0 0 10px}
 
-    .rail{
-      position:relative;
-    }
+    .rail{ position:relative; }
     .scroller{
       display:flex; gap:10px; overflow:auto; scroll-behavior:smooth; padding-bottom:18px;
       scroll-snap-type: x proximity;
@@ -150,14 +179,14 @@
 <body>
   <!-- Splash -->
   <div class="netflix-intro" aria-hidden="true">
-    <div class="netflix-logo" aria-label="Angel Contreras">AC</div>
+    <div class="netflix-logo nf" aria-label="Angel Contreras">(Angel Contreras)</div>
   </div>
 
   <!-- App -->
   <div class="main">
     <!-- Nav -->
     <nav class="navbar" id="navbar">
-      <div class="brand" aria-label="Brand">AC</div>
+      <div class="brand nf" aria-label="Brand">(Angel Contreras)</div>
       <div class="navlinks" role="navigation" aria-label="Primary">
         <a href="#home">Home</a>
         <a href="#projects">Projects</a>
@@ -170,7 +199,7 @@
     <!-- Hero -->
     <header class="hero" id="home">
       <div class="hero-content">
-        <h1>ANGEL CONTRERAS</h1>
+        <h1 class="nf">ANGEL CONTRERAS</h1>
         <p class="sub">Full Stack Developer &amp; IT Professional</p>
         <p class="desc">Passionate about building innovative solutions and creating seamless digital experiences. Breaking into tech, one project at a time.</p>
         <div class="cta">
@@ -189,211 +218,4 @@
           <!-- Cards -->
           <article class="card" style="background:#2a2a2a">
             <img class="thumb" alt="Project Charter Website" loading="lazy"
-                 src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=900&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">Project Charter Website</h3>
-              <p class="meta">Interactive web-based project management tool</p>
-            </div>
-          </article>
-
-          <article class="card">
-            <img class="thumb" alt="Portfolio Website" loading="lazy"
-                 src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=901&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">Portfolio Website</h3>
-              <p class="meta">Personal portfolio showcasing skills and projects</p>
-            </div>
-          </article>
-
-          <article class="card">
-            <img class="thumb" alt="IT Management System" loading="lazy"
-                 src="https://images.unsplash.com/photo-1556157382-97eda2d62296?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">IT Management System</h3>
-              <p class="meta">Full-stack application for IT project tracking</p>
-            </div>
-          </article>
-
-          <article class="card">
-            <img class="thumb" alt="Database Design" loading="lazy"
-                 src="https://images.unsplash.com/photo-1555949963-aa79dcee981d?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">Database Design</h3>
-              <p class="meta">Optimized database architecture</p>
-            </div>
-          </article>
-
-          <article class="card">
-            <img class="thumb" alt="Web Development" loading="lazy"
-                 src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">Web Development</h3>
-              <p class="meta">Responsive website designs</p>
-            </div>
-          </article>
-        </div>
-        <button class="scroll-btn scroll-right" aria-label="Scroll projects right">›</button>
-      </div>
-    </section>
-
-    <section class="section" id="skills">
-      <h2 class="section-title">Technical Skills</h2>
-      <div class="rail">
-        <button class="scroll-btn scroll-left" aria-label="Scroll skills left">‹</button>
-        <div class="scroller" tabindex="0" aria-label="Skills carousel">
-          <article class="card">
-            <img class="thumb" alt="HTML & CSS" loading="lazy"
-                 src="https://images.unsplash.com/photo-1520975916090-3105956dac38?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">HTML &amp; CSS</h3>
-              <p class="meta">Advanced frontend development</p>
-            </div>
-          </article>
-          <article class="card">
-            <img class="thumb" alt="JavaScript" loading="lazy"
-                 src="https://images.unsplash.com/photo-1518770660439-4636190af475?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">JavaScript</h3>
-              <p class="meta">Interactive web applications</p>
-            </div>
-          </article>
-          <article class="card">
-            <img class="thumb" alt="React" loading="lazy"
-                 src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">React</h3>
-              <p class="meta">Modern UI development</p>
-            </div>
-          </article>
-          <article class="card">
-            <img class="thumb" alt="Python" loading="lazy"
-                 src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">Python</h3>
-              <p class="meta">Back-end & automation</p>
-            </div>
-          </article>
-          <article class="card">
-            <img class="thumb" alt="SQL" loading="lazy"
-                 src="https://images.unsplash.com/photo-1556157382-97eda2d62296?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">SQL</h3>
-              <p class="meta">Database management</p>
-            </div>
-          </article>
-        </div>
-        <button class="scroll-btn scroll-right" aria-label="Scroll skills right">›</button>
-      </div>
-    </section>
-
-    <section class="section" id="experience">
-      <h2 class="section-title">Professional Experience</h2>
-      <div class="rail">
-        <button class="scroll-btn scroll-left" aria-label="Scroll experience left">‹</button>
-        <div class="scroller" tabindex="0" aria-label="Experience carousel">
-          <article class="card">
-            <img class="thumb" alt="IT Project Management" loading="lazy"
-                 src="https://images.unsplash.com/photo-1557800636-894a64c1696f?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">IT Project Management</h3>
-              <p class="meta">Managing tech projects efficiently</p>
-            </div>
-          </article>
-          <article class="card">
-            <img class="thumb" alt="Web Development" loading="lazy"
-                 src="https://images.unsplash.com/photo-1487014679447-9f8336841d58?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">Web Development</h3>
-              <p class="meta">Building responsive web solutions</p>
-            </div>
-          </article>
-          <article class="card">
-            <img class="thumb" alt="System Administration" loading="lazy"
-                 src="https://images.unsplash.com/photo-1518770660439-4636190af475?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">System Administration</h3>
-              <p class="meta">Maintaining IT infrastructure</p>
-            </div>
-          </article>
-          <article class="card">
-            <img class="thumb" alt="Technical Support" loading="lazy"
-                 src="https://images.unsplash.com/photo-1525182008055-f88b95ff7980?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">Technical Support</h3>
-              <p class="meta">Providing IT solutions</p>
-            </div>
-          </article>
-        </div>
-        <button class="scroll-btn scroll-right" aria-label="Scroll experience right">›</button>
-      </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer" id="contact">
-      <nav class="links" aria-label="Footer">
-        <a href="mailto:angel@example.com">Email</a>
-        <a href="https://linkedin.com" target="_blank" rel="noopener">LinkedIn</a>
-        <a href="https://github.com" target="_blank" rel="noopener">GitHub</a>
-        <a href="#resume">Resume</a>
-        <a href="#projects">Projects</a>
-        <a href="#skills">Skills</a>
-        <a href="#experience">Experience</a>
-        <a href="#home">Back to top</a>
-      </nav>
-      <p class="copyright">© <span id="year"></span> Angel Contreras. All rights reserved.</p>
-    </footer>
-  </div>
-
-  <script>
-    // Solidify nav on scroll
-    const navbar = document.getElementById('navbar');
-    const onScroll = () => {
-      if (window.scrollY > 80) navbar.classList.add('scrolled');
-      else navbar.classList.remove('scrolled');
-    };
-    addEventListener('scroll', onScroll, { passive: true });
-
-    // Smooth in-page nav
-    document.querySelectorAll('.navlinks a').forEach(a => {
-      a.addEventListener('click', e => {
-        const id = a.getAttribute('href');
-        if (!id || !id.startsWith('#')) return;
-        e.preventDefault();
-        const el = document.querySelector(id);
-        if (el) el.scrollIntoView({ behavior:'smooth', block:'start' });
-      });
-    });
-
-    // Carousels: buttons + keyboard
-    function setupRail(rail){
-      const scroller = rail.querySelector('.scroller');
-      const left = rail.querySelector('.scroll-left');
-      const right = rail.querySelector('.scroll-right');
-      const step = () => Math.round(scroller.clientWidth * 0.9);
-
-      left.addEventListener('click', () => scroller.scrollBy({left:-step(), behavior:'smooth'}));
-      right.addEventListener('click', () => scroller.scrollBy({left: step(), behavior:'smooth'}));
-
-      // Keyboard support when scroller focused
-      scroller.addEventListener('keydown', (e) => {
-        if (e.key === 'ArrowRight') { e.preventDefault(); scroller.scrollBy({left: step(), behavior:'smooth'}); }
-        if (e.key === 'ArrowLeft')  { e.preventDefault(); scroller.scrollBy({left:-step(), behavior:'smooth'}); }
-      });
-
-      // Hide buttons if not scrollable
-      const updateBtns = () => {
-        const max = scroller.scrollWidth - scroller.clientWidth - 1;
-        left.style.display  = scroller.scrollLeft <= 2 ? 'none' : 'grid';
-        right.style.display = scroller.scrollLeft >= max ? 'none' : 'grid';
-      };
-      scroller.addEventListener('scroll', updateBtns, { passive:true });
-      new ResizeObserver(updateBtns).observe(scroller);
-      updateBtns();
-    }
-    document.querySelectorAll('.rail').forEach(setupRail);
-
-    // Year
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-</body>
-</html>
+                 src="https://images.unsplash.com/p
