--- a/index.html
+++ b/index.html
@@ -6,25 +6,22 @@
   <title>Angel Contreras — Netflix-style</title>
   <meta name="color-scheme" content="dark">
 
-  <!-- If you have licensed Netflix Sans, point to it here -->
+  <!-- If you own licensed Netflix Sans files, point @font-face to them and remove the Bebas import. -->
   <!--
   <style>
     @font-face{
-      font-family: "Netflix Sans";
-      src: url("/assets/fonts/NetflixSans-Regular.woff2") format("woff2"),
-           url("/assets/fonts/NetflixSans-Regular.woff") format("woff");
-      font-weight: 400; font-style: normal; font-display: swap;
+      font-family:"Netflix Sans";
+      src:url("/assets/fonts/NetflixSans-Regular.woff2") format("woff2");
+      font-weight:400; font-style:normal; font-display:swap;
     }
     @font-face{
-      font-family: "Netflix Sans";
-      src: url("/assets/fonts/NetflixSans-Bold.woff2") format("woff2"),
-           url("/assets/fonts/NetflixSans-Bold.woff") format("woff");
-      font-weight: 700; font-style: normal; font-display: swap;
+      font-family:"Netflix Sans";
+      src:url("/assets/fonts/NetflixSans-Bold.woff2") format("woff2");
+      font-weight:700; font-style:normal; font-display:swap;
     }
   </style>
   -->
-
-  <!-- Free look-alike fallback (remove if you use Netflix Sans above) -->
+  <!-- Free look-alike fallback -->
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
   <style>
@@ -40,7 +37,7 @@
       background:var(--bg); color:var(--ink); overflow-x:hidden;
     }
 
-    /* Netflix-like font stack utility */
+    /* Netflix-like font utility */
     .nf{
       font-family:"Netflix Sans","Bebas Neue",system-ui,-apple-system,"Segoe UI","Helvetica Neue",Arial,sans-serif;
       letter-spacing:.02em;
@@ -55,7 +52,8 @@
     .netflix-logo{
       font-size: clamp(72px,12vw,200px); font-weight: 900; color:var(--accent);
       letter-spacing:-.05em; animation:logoZoom 1.8s ease both;
-      text-shadow:.06em 0 var(--accent);  /* subtle red offset like the N */
+      text-shadow:.06em 0 var(--accent);
+      text-align:center;
     }
     @keyframes logoZoom{
       0%{transform:scale(.6); opacity:0}
@@ -179,14 +177,14 @@
 <body>
   <!-- Splash -->
   <div class="netflix-intro" aria-hidden="true">
-    <div class="netflix-logo nf" aria-label="Angel Contreras">(Angel Contreras)</div>
+    <div class="netflix-logo nf" aria-label="Angel Contreras">Angel Contreras</div>
   </div>
 
   <!-- App -->
   <div class="main">
     <!-- Nav -->
     <nav class="navbar" id="navbar">
-      <div class="brand nf" aria-label="Brand">(Angel Contreras)</div>
+      <div class="brand nf" aria-label="Brand">Angel Contreras</div>
       <div class="navlinks" role="navigation" aria-label="Primary">
         <a href="#home">Home</a>
         <a href="#projects">Projects</a>
@@ -209,13 +207,92 @@
       </div>
     </header>
 
-    <!-- Rows -->
+    <!-- Sections (unchanged) -->
+    <!-- Projects -->
     <section class="section" id="projects">
       <h2 class="section-title">Featured Projects</h2>
       <div class="rail">
         <button class="scroll-btn scroll-left" aria-label="Scroll projects left">‹</button>
         <div class="scroller" tabindex="0" aria-label="Featured projects carousel">
-          <!-- Cards -->
           <article class="card" style="background:#2a2a2a">
             <img class="thumb" alt="Project Charter Website" loading="lazy"
-                 src="https://images.unsplash.com/p
+                 src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=900&auto=format&fit=crop">
+            <div class="overlay">
+              <h3 class="title">Project Charter Website</h3>
+              <p class="meta">Interactive web-based project management tool</p>
+            </div>
+          </article>
+
+          <article class="card">
+            <img class="thumb" alt="Portfolio Website" loading="lazy"
+                 src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=901&auto=format&fit=crop">
+            <div class="overlay">
+              <h3 class="title">Portfolio Website</h3>
+              <p class="meta">Personal portfolio showcasing skills and projects</p>
+            </div>
+          </article>
+
+          <article class="card">
+            <img class="thumb" alt="IT Management System" loading="lazy"
+                 src="https://images.unsplash.com/photo-1556157382-97eda2d62296?w=1000&auto=format&fit=crop">
+            <div class="overlay">
+              <h3 class="title">IT Management System</h3>
+              <p class="meta">Full-stack application for IT project tracking</p>
+            </div>
+          </article>
+
+          <article class="card">
+            <img class="thumb" alt="Database Design" loading="lazy"
+                 src="https://images.unsplash.com/photo-1555949963-aa79dcee981d?w=1000&auto=format&fit=crop">
+            <div class="overlay">
+              <h3 class="title">Database Design</h3>
+              <p class="meta">Optimized database architecture</p>
+            </div>
+          </article>
+
+          <article class="card">
+            <img class="thumb" alt="Web Development" loading="lazy"
+                 src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?w=1000&auto=format&fit=crop">
+            <div class="overlay">
+              <h3 class="title">Web Development</h3>
+              <p class="meta">Responsive website designs</p>
+            </div>
+          </article>
+        </div>
+        <button class="scroll-btn scroll-right" aria-label="Scroll projects right">›</button>
+      </div>
+    </section>
+
+    <!-- Skills -->
+    <section class="section" id="skills">
+      <h2 class="section-title">Technical Skills</h2>
+      <div class="rail">
+        <button class="scroll-btn scroll-left" aria-label="Scroll skills left">‹</button>
+        <div class="scroller" tabindex="0" aria-label="Skills carousel">
+          <article class="card">
+            <img class="thumb" alt="HTML & CSS" loading="lazy"
+                 src="https://images.unsplash.com/photo-1520975916090-3105956dac38?w=1000&auto=format&fit=crop">
+            <div class="overlay">
+              <h3 class="title">HTML &amp; CSS</h3>
+              <p class="meta">Advanced frontend development</p>
+            </div>
+          </article>
+          <article class="card">
+            <img class="thumb" alt="JavaScript" loading="lazy"
+                 src="https://images.unsplash.com/photo-1518770660439-4636190af475?w=1000&auto=format&fit=crop">
+            <div class="overlay">
+              <h3 class="title">JavaScript</h3>
+              <p class="meta">Interactive web applications</p>
+            </div>
+          </article>
+          <article class="card">
+            <img class="thumb" alt="React" loading="lazy"
+                 src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?w=1000&auto=format&fit=crop">
+            <div class="overlay">
+              <h3 class="title">React</h3>
+              <p class="meta">Modern UI development</p>
+            </div>
+          </article>
+          <article class="card">
+            <img class="thumb" alt="Python" loading="lazy"
+                 src="https://images.un
