--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Angel Contreras — Netflix-style</title>
   <meta name="color-scheme" content="dark">
 
-  <!-- If you own licensed Netflix Sans files, wire them via @font-face and remove Bebas. -->
+  <!-- If you own licensed Netflix Sans, wire it via @font-face and remove Bebas. -->
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
   <style>
@@ -29,7 +29,7 @@
       text-transform:uppercase;
     }
 
-    /* --- Intro (unchanged, but readable) --- */
+    /* --- Intro (readable) --- */
     .netflix-intro{
       position:fixed; inset:0; display:grid; place-items:center;
       background:#000; z-index:10000; animation:hideIntro .5s ease 2.6s forwards;
@@ -60,46 +60,55 @@
       background:#000; z-index:9000;
     }
     .profiles.show{ display:flex; animation:fadeIn .35s ease both; }
-    .profiles-wrap{ width:min(1100px,92vw); margin:auto; text-align:center; }
+    .profiles-wrap{ width:min(1000px,92vw); margin:auto; text-align:center; }
     .profiles h2{
       font:900 clamp(20px,3.2vw,32px)/1.2 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color:#fff; margin:0 0 20px;
+      color:#fff; margin:0 0 22px;
     }
+
     .grid{
-      display:grid; gap:18px;
-      grid-template-columns: repeat(4, minmax(0,1fr));
+      display:grid; gap:22px;
+      grid-template-columns: repeat(3, minmax(0,1fr)); /* exactly three */
+      place-items:center;
     }
-    @media (max-width:900px){ .grid{grid-template-columns: repeat(3,1fr)} }
-    @media (max-width:640px){ .grid{grid-template-columns: repeat(2,1fr)} }
+    @media (max-width: 680px){
+      .grid{ grid-template-columns: repeat(3, minmax(0,1fr)); gap:14px; }
+    }
 
     .tile{
       display:grid; gap:10px; place-items:center; cursor:pointer; text-decoration:none;
-      user-select:none; outline:none;
+      user-select:none; outline:none; background:transparent; border:0;
     }
     .avatar{
-      width:min(28vw,170px); height:min(28vw,170px);
-      border-radius:10px; overflow:hidden; background:#1f1f1f;
+      width:min(32vw,180px); height:min(32vw,180px);
+      border-radius:10px; overflow:hidden;
       border:2px solid transparent; box-shadow:0 0 0 0 rgba(255,255,255,.0);
-      transition:transform .12s ease, border-color .12s ease, box-shadow .12s ease;
+      transition:transform .12s ease, border-color .12s ease, box-shadow .12s ease, filter .12s ease;
       display:grid; place-items:center;
     }
-    .avatar img{ width:100%; height:100%; object-fit:cover; display:block; }
     .tile:focus .avatar, .tile:hover .avatar{
       transform:scale(1.04);
       border-color:#fff;
       box-shadow:0 0 0 4px rgba(255,255,255,.12);
+      filter:brightness(1.06);
     }
     .label{
-      font-weight:700; color:#a3a3a3; letter-spacing:.04em; font-size:14px;
+      font-weight:800; color:#a3a3a3; letter-spacing:.04em; font-size:14px;
+      text-transform:none;
     }
-    .profiles .manage{
-      display:inline-block; margin-top:26px; color:#a3a3a3; font-size:13px; text-decoration:none;
-    }
-    .profiles .manage:hover{ color:#c7c7c7; text-decoration:underline; }
+
+    /* Avatar color blocks (close to Netflix style) */
+    .av-recruiter { background:linear-gradient(180deg,#0DB5FF,#0070F3); }
+    .av-family    { background:linear-gradient(180deg,#25E26A,#0AA84B); }
+    .av-guest     { background:linear-gradient(180deg,#FFB21E,#FF7A00); }
+
+    /* Simple white icons */
+    .icon{ width:56%; height:56%; display:block }
+    .icon svg{ width:100%; height:100%; fill:#fff }
 
     .hide{ display:none !important; }
 
-    /* --- Main app visibility is controlled by JS after profile pick --- */
+    /* Main app shows after pick */
     .main{ opacity:0; }
     .main.show{ animation:fadeIn .6s ease forwards; }
     @keyframes fadeIn{ to{ opacity:1 } }
@@ -179,24 +188,6 @@
     .card:hover .overlay{opacity:1}
     .title{font-size:15px; font-weight:800; margin:0 0 6px}
     .meta{font-size:12px; color:#d2d2d2}
-
-    .scroll-btn{
-      position:absolute; top:50%; translate:0 -50%; z-index:10;
-      display:grid; place-items:center; width:40px; height:40px; border-radius:999px;
-      background:rgba(0,0,0,.5); border:1px solid rgba(255,255,255,.12);
-      color:#fff; cursor:pointer; opacity:0; transition:opacity .2s;
-    }
-    .rail:hover .scroll-btn{opacity:1}
-    .scroll-btn:hover{background:rgba(0,0,0,.7)}
-    .scroll-left{left: -6px}
-    .scroll-right{right:-6px}
-
-    /* Footer */
-    .footer{padding:50px clamp(16px,4vw,48px); background:#000; border-top:1px solid #222}
-    .links{display:grid; grid-template-columns: repeat(4, minmax(0,1fr)); gap:18px 24px; margin-bottom:20px}
-    .links a{color:#808080; text-decoration:none; font-size:13px}
-    .links a:hover{text-decoration:underline}
-    .copyright{color:#808080; font-size:12px}
   </style>
 </head>
 <body>
@@ -210,37 +201,46 @@
     <div class="profiles-wrap">
       <h2 id="whosWatching" class="nf">Who’s watching?</h2>
       <div class="grid">
-        <!-- Each tile maps to a different section/URL via data-target -->
-        <button class="tile" data-profile="angel" data-target="#projects">
-          <div class="avatar" aria-hidden="true">
-            <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=600&auto=format&fit=crop" alt="">
+        <!-- Recruiter -->
+        <button class="tile" data-profile="recruiter" data-target="#projects" aria-label="Recruiter profile">
+          <div class="avatar av-recruiter" aria-hidden="true">
+            <span class="icon">
+              <!-- briefcase icon -->
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M10 6V5a2 2 0 0 1 2-2h0a2 2 0 0 1 2 2v1h3a3 3 0 0 1 3 3v3h-7v1a1 1 0 0 1-2 0V12H2V9a3 3 0 0 1 3-3h5Zm2-1h0a1 1 0 0 0-1 1v1h2V6a1 1 0 0 0-1-1ZM2 13h9v1a1 1 0 0 0 2 0v-1h9v5a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-5Z"/>
+              </svg>
+            </span>
           </div>
-          <span class="label nf">Angel</span>
+          <span class="label">Recruiter</span>
         </button>
 
-        <button class="tile" data-profile="developer" data-target="#skills">
-          <div class="avatar" aria-hidden="true">
-            <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?w=600&auto=format&fit=crop" alt="">
+        <!-- Family / Friends -->
+        <button class="tile" data-profile="family" data-target="#skills" aria-label="Family and Friends profile">
+          <div class="avatar av-family" aria-hidden="true">
+            <span class="icon">
+              <!-- people icon -->
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M16 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4Zm-8 2a4 4 0 1 0-4-4 4 4 0 0 0 4 4Zm8 2c-3.31 0-6 1.79-6 4v1h12v-1c0-2.21-2.69-4-6-4Zm-8 0c-3.31 0-6 1.79-6 4v1h8v-1c0-1.03.39-1.97 1.07-2.76A7.2 7.2 0 0 0 8 15Z"/>
+              </svg>
+            </span>
           </div>
-          <span class="label nf">Developer</span>
+          <span class="label">Family / Friends</span>
         </button>
 
-        <button class="tile" data-profile="it" data-target="#experience">
-          <div class="avatar" aria-hidden="true">
-            <img src="https://images.unsplash.com/photo-1556157382-97eda2d62296?w=600&auto=format&fit=crop" alt="">
+        <!-- Guest -->
+        <button class="tile" data-profile="guest" data-target="#home" aria-label="Guest profile">
+          <div class="avatar av-guest" aria-hidden="true">
+            <span class="icon">
+              <!-- smile icon -->
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M12 2a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2Zm-3.5 9a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 8.5 11Zm9 2.5a5.5 5.5 0 0 1-11 0 1 1 0 0 1 2 0 3.5 3.5 0 0 0 7 0 1 1 0 0 1 2 0ZM15.5 11A1.5 1.5 0 1 1 17 9.5 1.5 1.5 0 0 1 15.5 11Z"/>
+              </svg>
+            </span>
           </div>
-          <span class="label nf">IT</span>
-        </button>
-
-        <button class="tile" data-profile="guest" data-target="#home">
-          <div class="avatar" aria-hidden="true">
-            <img src="https://images.unsplash.com/photo-1520975916090-3105956dac38?w=600&auto=format&fit=crop" alt="">
-          </div>
-          <span class="label nf">Guest</span>
+          <span class="label">Guest</span>
         </button>
       </div>
-
-      <a href="#" id="manageProfiles" class="manage">Manage profiles</a>
+      <!-- Removed Manage profiles link as requested -->
     </div>
   </div>
 
@@ -285,7 +285,6 @@
               <p class="meta">Interactive web-based project management tool</p>
             </div>
           </article>
-
           <article class="card">
             <img class="thumb" alt="Portfolio Website" loading="lazy"
                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=901&auto=format&fit=crop">
@@ -294,7 +293,6 @@
               <p class="meta">Personal portfolio showcasing skills and projects</p>
             </div>
           </article>
-
           <article class="card">
             <img class="thumb" alt="IT Management System" loading="lazy"
                  src="https://images.unsplash.com/photo-1556157382-97eda2d62296?w=1000&auto=format&fit=crop">
@@ -303,7 +301,6 @@
               <p class="meta">Full-stack application for IT project tracking</p>
             </div>
           </article>
-
           <article class="card">
             <img class="thumb" alt="Database Design" loading="lazy"
                  src="https://images.unsplash.com/photo-1555949963-aa79dcee981d?w=1000&auto=format&fit=crop">
@@ -312,7 +309,6 @@
               <p class="meta">Optimized database architecture</p>
             </div>
           </article>
-
           <article class="card">
             <img class="thumb" alt="Web Development" loading="lazy"
                  src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?w=1000&auto=format&fit=crop">
@@ -516,15 +512,11 @@
         osc.start(t); osc.stop(t + len);
       }
 
-      // HIT 1 + noise
       hit(now, { type:'sine', f0:56, f1:40, g0:1.0, gDur:0.9, len:1.0 });
       noiseBurst(now, 0.22, 0.7);
-
-      // HIT 2 (higher) + short bright noise
       hit(now + 0.36, { type:'triangle', f0:392, f1:330, g0:0.95, gDur:0.95, len:1.3 });
       noiseBurst(now + 0.36, 0.18, 0.5);
 
-      // airy tail
       const tail = ctx.createBuffer(1, ctx.sampleRate * 0.5, ctx.sampleRate);
       const td = tail.getChannelData(0);
       for (let i=0;i<td.length;i++) td[i] = (Math.random()*2-1) * (1 - i/td.length);
@@ -536,7 +528,7 @@
       tailSrc.start(now+0.5); tailSrc.stop(now+2.0);
     }
 
-    // ---------- Flow control: Intro -> Profiles -> Main ----------
+    // ---------- Flow: Intro -> Profiles -> Main ----------
     const profiles = document.getElementById('profiles');
     const appRoot = document.getElementById('appRoot');
 
@@ -544,14 +536,9 @@
       profiles.classList.add('show');
       profiles.querySelector('.tile')?.focus();
     }
-    function hideProfiles(){
-      profiles.classList.remove('show');
-    }
-    function showMain(){
-      appRoot.classList.add('show');
-    }
+    function hideProfiles(){ profiles.classList.remove('show'); }
+    function showMain(){ appRoot.classList.add('show'); }
 
-    // Try to play automatically; if blocked, wait for first interaction.
     function kickIntro(){
       let started = false;
       const start = async () => {
@@ -561,17 +548,15 @@
         window.removeEventListener('keydown', start);
         window.removeEventListener('touchstart', start);
       };
-      setTimeout(start, 300); // logo first
+      setTimeout(start, 300);
       window.addEventListener('click', start, { once:true });
       window.addEventListener('keydown', start, { once:true });
       window.addEventListener('touchstart', start, { once:true });
     }
 
-    // After intro finishes, either show profile screen or skip if we remember one
     function afterIntro(){
       const saved = localStorage.getItem('ac_profile_choice');
       if (saved) {
-        // Jump straight to saved destination
         const btn = document.querySelector(`.tile[data-profile="${saved}"]`);
         if (btn) handleProfileClick.call(btn);
         else showProfiles();
@@ -580,26 +565,15 @@
       }
     }
 
-    // Handle clicks on profile tiles
     function handleProfileClick(){
       const target = this.getAttribute('data-target') || '#home';
       const profile = this.getAttribute('data-profile') || 'guest';
       localStorage.setItem('ac_profile_choice', profile);
-      hideProfiles();
-      showMain();
-      // Scroll to destination
+      hideProfiles(); showMain();
       const el = document.querySelector(target);
       if (el) el.scrollIntoView({ behavior:'smooth', block:'start' });
     }
 
-    // Manage link (clear choice)
-    document.getElementById('manageProfiles').addEventListener('click', (e) => {
-      e.preventDefault();
-      localStorage.removeItem('ac_profile_choice');
-      alert('Profile choice cleared. Reload to choose again.');
-    });
-
-    // Wire profile buttons
     document.querySelectorAll('.tile').forEach(btn => {
       btn.addEventListener('click', handleProfileClick);
       btn.addEventListener('keydown', (e) => {
@@ -607,12 +581,11 @@
       });
     });
 
-    // Start sequence
     window.addEventListener('DOMContentLoaded', () => {
       kickIntro();
-      // Wait for intro to finish (2.6s) then show profiles
-      setTimeout(afterIntro, 2700);
+      setTimeout(afterIntro, 2700); // after intro fades
     });
   </script>
 </body>
 </html>
+
